--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,33 @@
-<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style/app.css">
-<meta charset=utf-8/>
+<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css">
 <title>Test Palindrome</title>
 <script src="lib/p5.js" type="text/javascript"></script>
 <script src="lib/p5.dom.js" type="text/javascript"></script>
 <script src="js/sketch.js" type="text/javascript"></script>
+<style>
+	body {
+  		margin-top: 20;
+  		display: flex;
+  		justify-content: center;
+  		align-items: top;
+	}
+	.jumbotron {
+		margin-top: 60px;
+	}
+	.btn {
+		margin-top: 10px;
+	}
+	</style>
+
+</style>
 </head>
 <body>
-<table>
-<tbody>
-<tr>
-<td width="65%"><strong>INPUT</strong></td>
-</tr>
-<tr>
-<td><input id="word" type="text" name="word" value="" placeholder="Insert word or phrase..."</td>
-<button id="submit">Verify!</button>
-</tr>
-</tbody>
-<tbody>
-<tr>
-<td width="65%"><strong>RESULT</strong></td>
-</tr>
-</tbody>
-</table>
+	<div class="jumbotron">
+		<h3>Palindrome Analysis</h3>
+		<input class="form-control" type="text" id="word" placeholder="Insert word or phrase..." />
+		<button class="btn btn-primary btn-block" id="submit">Verify</button>
+	</div>
 </body>
 </html>
+
